--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,10 @@ h2{
   margin-bottom: 10px;
 }
 
+h4{
+  margin-bottom: 0px;
+}
+
 p {
   margin: 10px 0;
 }
@@ -76,23 +80,34 @@ button:hover{
 input, select{
   padding: 5px;
   margin-bottom: 10px;
+  margin-top: 5px;
   border: 1px solid #ddd;
   border-radius: 3px;
   width: 100%;
 }
 
-.filter, .search {
+label {
+  padding-left: 5px;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.search, .filter{
   border-bottom: 1px solid #555;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
 
-.filter-options {
-  display: flex;
-  justify-content: space-between;
-  gap: 3rem;
+.search {
+  flex: 2
 }
 
-.filter-options div {
-  flex: 1 1 0;
+.filter{
+  flex:1
+}
+
+.search input{
+  width: 90%;
 }
